syntax = "proto3";

package service;
option go_package="./pb";

service Carts {
  rpc DelCarts (DelCartsReq) returns (DelCartsResp);
  rpc DelCartsRollBack (DelCartsReq) returns (DelCartsResp);
}

message DelCartsReq {
  int64 usr = 1;
  repeated string ItemId = 2;
}

message DelCartsResp {

}